syntax = "proto3";

package discovery;

option go_package = "github.com/gbauso/grpc_microservices/discoveryservice/grpc_gen";

service DiscoveryService {
    rpc GetServiceHandlers (DiscoverySearchRequest) returns (DiscoverySearchResponse) {}
    rpc RegisterServiceHandlers (RegisterServiceHandlersRequest) returns (RegisterServiceHandlersResponse) {}
    rpc UnregisterService (UnregisterServiceRequest) returns (UnregisterServiceResponse) {}
}

message DiscoverySearchRequest {
    string serviceDefinition = 1;
}

message DiscoverySearchResponse {
    repeated string services = 1;
}

message RegisterServiceHandlersRequest {
    string service = 1;
    string serviceId = 2;
    repeated string handlers = 3;
}

message RegisterServiceHandlersResponse {
}

message UnregisterServiceRequest {
    string serviceId = 1;
}

message UnregisterServiceResponse {

}
